# mcp-einvoicing-be

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  README.nl.md  RELEASE.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
audit/: audit_vs_core.py  report.json
src/mcp_einvoicing_be/: __init__.py  server.py
src/mcp_einvoicing_be/models/: __init__.py  invoice.py  party.py
src/mcp_einvoicing_be/specs/: __init__.py  download.py
src/mcp_einvoicing_be/standards/: __init__.py  mercurius.py  peppol_bis_3.py  pint_be.py  ubl.py
src/mcp_einvoicing_be/tools/: __init__.py  generation.py  lookup.py  parsing.py  transformation.py  validation.py
src/mcp_einvoicing_be/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/fixtures/: invoice_invalid.xml  invoice_valid_peppol.xml  invoice_valid_pint_be.xml
tests/test_tools/: test_generation.py  test_helpers_and_models.py  test_transformation.py  test_v030_features.py  test_validation.py
