[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-einvoicing-be"
version = "0.1.1"
description = "MCP server for Belgian electronic invoicing (Peppol BIS 3.0, UBL 2.1, PINT-BE, Mercurius)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Cristian Mendez", email = "cmendezs@users.noreply.github.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "einvoicing",
    "e-invoicing",
    "belgium",
    "peppol",
    "ubl",
    "pint-be",
    "mercurius",
    "en16931",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "mcp-einvoicing-core>=0.1.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "lxml-stubs>=0.5.1",
]

[project.scripts]
mcp-einvoicing-be = "mcp_einvoicing_be.server:main"

[project.urls]
Homepage = "https://github.com/cmendezs/mcp-einvoicing-be"
Repository = "https://github.com/cmendezs/mcp-einvoicing-be"
Issues = "https://github.com/cmendezs/mcp-einvoicing-be/issues"
Changelog = "https://github.com/cmendezs/mcp-einvoicing-be/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_einvoicing_be"]

[tool.hatch.build.targets.sdist]
exclude = ["mcp-publisher", "dist/", ".github/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_einvoicing_be --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
